Revert "Merged in ON-1080-top-nav-alignment-issue (pull request #1276)"
This reverts commit 38560ccb9bf89d258c1d087ceba98e10ea8b1932, reversing
changes made to 7d10c6faabfaaf0986b5b3409544628f9a16b261.

--- a/app/styleguides/demo/components/top-nav.css
+++ b/app/styleguides/demo/components/top-nav.css
@@ -295,14 +295,28 @@ $drawerSelector: nav-drawer;
             display: block;
           }
 
-          .$(drawerSelector)__sub-nav--columns {
-            @mixin ul-columns 1, em(80);
+          &:first-of-type {
+            margin-right: em(100);
+
+            .$(drawerSelector)__sub-nav--columns {
+              @mixin ul-columns 3, em(80);
+            }
           }
 
-          &:not(:last-of-type) {
-            margin-right: em(80);
+          &:nth-of-type(2) {
+            margin-right: em(100);
+
+            .$(drawerSelector)__sub-nav--columns {
+              @mixin ul-columns 2, em(80);
+            }
           }
-          
+
+          &:nth-of-type(3) {
+            .$(drawerSelector)__sub-nav--columns {
+              @mixin ul-columns 1, em(80);
+            }
+          }
+
           ul {
             li {
               display: block;
@@ -352,7 +366,6 @@ $drawerSelector: nav-drawer;
       line-height: 28px;
       display: block;
       text-align: left;
-      min-height: em(28);
     }
 
     &.$(drawerSelector)--mobile {
@@ -581,12 +594,26 @@ $drawerSelector: nav-drawer;
           width: em(80);
         }
 
-        .$(drawerSelector)__sub-nav--columns {
-          @mixin ul-columns 1, em(80);
+        &:first-of-type {
+          margin-right: em(80);
+
+          .$(drawerSelector)__sub-nav--columns {
+            @mixin ul-columns 3, em(80);
+          }
         }
 
-        &:not(:last-of-type) {
+        &:nth-of-type(2) {
           margin-right: em(80);
+
+          .$(drawerSelector)__sub-nav--columns {
+            @mixin ul-columns 2, em(80);
+          }
+        }
+
+        &:nth-of-type(3) {
+          .$(drawerSelector)__sub-nav--columns {
+            @mixin ul-columns 1, em(80);
+          }
         }
       }
     }
@@ -760,7 +787,7 @@ $drawerSelector: nav-drawer;
 /*>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<*/
 .nav-drawer--sports {
   > .container {
-    padding-left: widthOnGrid(3, 1);
+    padding-left: widthOnGrid(3, 2);
     background-image: url('/media/components/top-nav/sports_dropdown_logo.png');
     background-size: em(140) em(40);
     background-repeat: no-repeat;
